Frontend/src/components/Navbar/Navbar.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');


.App {
  text-align: center;
  z-index: 1000;
  position: fixed;
  top: 0%;
  width: 100%;
  height: 20%;
  height: 20%;
  
}

.title {
  text-align: left;
  padding-left: 35px;
  font-family: "Nunito", sans-serif;
  font-optical-sizing: auto;
  font-weight: 700;
  font-size: 24px;
}

.blurred-background {
  filter: blur(5px); /* Adjust the blur intensity as needed */
}
.navbar-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.navbar-list {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
}

.nav-item {
  margin: 0;
  padding: 0;
}

.nav-link {
  text-decoration: none;
  color: white;
}

.navbar_icon{
  display: flex;
  align-items: center;
}

.navbar_bg {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #ff8f2ef7;
  padding-right: 2rem;
  height: 40px;
  /* Adjust padding as needed */
}

.navbar-icon {
  background-color: antiquewhite;
  align-items: center;
}

.home_bg {
  border: 0px;
  background: transparent;
  margin-left: 15px;
  /* Adjust margin between icons as needed */
}

.home_bg.active {
  padding: 0;
  padding: 0;
  border-radius: 10px;
  color: aliceblue;
  background: #3c608b;
  /* background: linear-gradient(#141e30, #5592d7); */
  /* Change this to the color you want */
}


.icon_bg {
  height: 25px;
  width: 25px;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 130px;
 
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 200;
  margin: 0;
  padding: 0;
  right: 0;
}

.dropdown:hover .dropdown-content {
  display: block;
  width: 150px;
  background-color: white;
  border-radius: 1px;
}

.dropdown-content button {
  background-color: white;
  /* Green background color */
  color: black;
  /* White text color */
  padding: 11px;
  border: 0px;
  text-align: center;
  font-size: 14px;
  text-decoration: none;
  display: block;
  width: 100%;
  cursor: pointer;
  /* transition: background-color 0.3s; */
  margin: 0;
  /* Add this line to reset margin */
  
}

.dropdown-content button:hover {
  background: rgb(206, 223, 233);
  /* Darker green on hover */
  width: 150px;
  height: 50px;
  text-align: center;
  color:#0b0c0c;
  border-radius: 1px;
  
}

.dialog-container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent background to dim the rest of the page */
}

.dialog-content {
  background-color: white; /* dialog background color */
  padding: 20px;
  border-radius: 8px;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); /* optional: add box shadow for depth */
}

